@@ -1,6 +1,7 @@
 Revision history for Perl extension Module-Manifest
 
 0.07 Mon 20 Apr 2009
+	- Upgrading to Module::Install::DSL 0.83
 	- Fixes for Win32
 	- Removing distribution-specific skip file (the shared on works fine)
 	- Removing custom README file (the generated one is the same)
